--- a/public/scss/partials/_calendar.scss
+++ b/public/scss/partials/_calendar.scss
@@ -51,7 +51,7 @@
     }
 
     .prev { 
-      background: url(../images/arrow-left.png) no-repeat center center; 
+      background: url(../img/arrow-left.png) no-repeat center center; 
       background-size: 11px 20px;
       width: 11px; height: 20px;
 
@@ -59,7 +59,7 @@
       left: 24px;      
     }
     .next { 
-      background: url(../images/arrow-right.png) no-repeat center center; 
+      background: url(../img/arrow-right.png) no-repeat center center; 
       background-size: 11px 20px;
       width: 11px; height: 20px;
 
