--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -23,7 +23,7 @@ footer {
 	a.app-dl {
 		position: absolute;
 		width: 204px;height: 64px;
-		background: url(../images/btn-app-dl.png) no-repeat center center;
+		background: url(../img/btn-app-dl.png) no-repeat center center;
 		background-size: 100%;
 		top: 50%;
 		right: 5%;
