--- a/public/scss/partials/_page-user.scss
+++ b/public/scss/partials/_page-user.scss
@@ -29,17 +29,17 @@
                 li {
                     &:first-child {
                         .icon-nav {
-                        background: url(../images/icon-salon-nav3.jpg) no-repeat center center;
+                        background: url(../img/icon-salon-nav3.jpg) no-repeat center center;
                         }
                     }
                     &:nth-child(2) {
                         .icon-nav {
-                            background: url(../images/icon-salon-nav2.jpg) no-repeat center center;
+                            background: url(../img/icon-salon-nav2.jpg) no-repeat center center;
                         }
                     }
                     &:last-child {
                         .icon-nav {
-                            background: url(../images/icon-coeur.png) no-repeat center center;
+                            background: url(../img/icon-coeur.png) no-repeat center center;
                         }
                     }
                 }
