--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -1,6 +1,6 @@
 header {
 	a.menu-trigger {
-		background: url(../images/mobile-menu.png) no-repeat center center;
+		background: url(../img/mobile-menu.png) no-repeat center center;
 		background-size: 90%;
 
 		margin-top: 15px;
@@ -11,7 +11,7 @@ header {
 		height: 28px;
 		margin-right: 15px;
 		&.close {
-			background: url(../images/mobile-menu-close.png) no-repeat center center;
+			background: url(../img/mobile-menu-close.png) no-repeat center center;
 			background-size: 90%;
 			opacity: 1;
 		}
@@ -21,7 +21,7 @@ header {
 	background-color: transparent;
 	font-size: 1em;
 	.logo {
-		background: url(../images/logo.png) no-repeat center center;
+		background: url(../img/logo.png) no-repeat center center;
 		width: 128px; height: 41px; margin-top: 9px;display: block;
 		float: left; background-size: 100%;
 	}
@@ -112,7 +112,7 @@ header {
 		}
 
 		.logo {
-			background: url(../images/logo-red.png) no-repeat center center;
+			background: url(../img/logo-red.png) no-repeat center center;
 			background-size: 100%;
 		}
 		nav ul li {
@@ -188,19 +188,19 @@ header:not(.white) {
 		position: fixed; top: 0; z-index: 999;
 
 		a.logo {
-			background: url(../images/logo-red.png) no-repeat center left;
+			background: url(../img/logo-red.png) no-repeat center left;
 			background-size: 100%;
 			margin-top: 20px;
 		}
 /* 		a.menu-trigger {
-			background: url(../images/mobile-menu.png) no-repeat center center;
+			background: url(../img/mobile-menu.png) no-repeat center center;
 			background-size: 90%;
 			margin-top: 25px;
 			width: 28px;
 			height: 28px;
 			margin-right: 15px;
 			&.close {
-				background: url(../images/mobile-menu-close.png) no-repeat center center;
+				background: url(../img/mobile-menu-close.png) no-repeat center center;
 				background-size: 90%;
 				opacity: 1;
 			}
