--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -56,12 +56,12 @@
                 li {
                     &:first-child {
                         .icon-nav {
-                        background: url(../images/icon-resa-user.png) no-repeat center center;
+                        background: url(../img/icon-resa-user.png) no-repeat center center;
                         }
                     }
                     &:nth-child(2) {
                         .icon-nav {
-                            background: url(../images/icon-salon-nav3.jpg) no-repeat center center;
+                            background: url(../img/icon-salon-nav3.jpg) no-repeat center center;
                         }
                     }
                 }
