--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -255,7 +255,7 @@
 				width: 100%;
 				// padding-left: 40px;
 				.icon {
-					background: url(../images/icon-resa-user.png) no-repeat center left;
+					background: url(../img/icon-resa-user.png) no-repeat center left;
 					width: 16px;height: 16px;display: inline-block;
 					position: absolute; left: 0; top: 3px;
 				}
@@ -281,13 +281,13 @@
 				}
 				&[for='email'] {
 					.icon {
-						background:url(../images/icon-resa-mail.png) no-repeat center left;
+						background:url(../img/icon-resa-mail.png) no-repeat center left;
 						width: 17px;
 					}
 				}
 				&[for='phone'] {
 					.icon {
-						background:url(../images/icon-resa-phone.png) no-repeat center left;
+						background:url(../img/icon-resa-phone.png) no-repeat center left;
 						width: 17px;
 					}
 				}
