--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9679,7 +9679,7 @@ figcaption a.address {
   height: 100%;
   min-height: 100px;
   max-height: 200px;
-  background: url(/img/loader_128.png) no-repeat center center;
+  background: url(../img/loader_128.png) no-repeat center center;
   background-size: 64px 64px;
   -webkit-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
   -moz-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
