--- a/public/scss/_temp.scss
+++ b/public/scss/_temp.scss
@@ -73,7 +73,7 @@ figcaption a.address {
   width: 100%; height: 100%;
   min-height: 100px;
   max-height: 200px;
-  background:url(/img/loader_128.png) no-repeat center center;
+  background:url(../img/loader_128.png) no-repeat center center;
   background-size: 64px 64px;
   -webkit-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
   -moz-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
