--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -54,6 +54,7 @@ body {
 @import "partials/page-user";
 @import "partials/page-hairdresser";
 @import "partials/select";
+@import "partials/emailModal";
 
 //Bastien CSS work
 @import "partials/auth-form";
