--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -501,7 +501,7 @@ section.home-section {
     @media screen and (min-width: $screen-xs-max) {
         height: 400px; width: 100vw;
         left: calc(-50vw + 50%);
-        background: url(../img/bg-download.jpg) no-repeat center center;
+        background: url(../img/bg-download-lite.jpg) no-repeat center center;
         background-size: cover;
         margin: 0;
     }
