--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10684,6 +10684,14 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
         display: block;
         height: 99%; } }
 
+.comments .post-comment textarea {
+  margin-top: 10px;
+  width: 100%;
+  height: 80px;
+  border-color: #fe5b5f;
+  border-radius: 10px;
+  resize: none; }
+
 .comments .single-comment {
   border-bottom: 1px solid #f9f9f9;
   padding: 20px; }
