--- a/public/scss/partials/_buttons.scss
+++ b/public/scss/partials/_buttons.scss
@@ -112,7 +112,7 @@ div.connect-button {
         background-color: $facebook-bg;
         &:before {
             content: " ";
-            background: url(../../img/facebook@2x.png) no-repeat center center;
+            background: url(../img/facebook@2x.png) no-repeat center center;
             position: absolute;
             width: 60px;
             height: 60px;
@@ -128,7 +128,7 @@ div.connect-button {
         background-color: $twitter-bg;
         &:before {
             content: " ";
-            background: url(../../img/twitter@2x.png) no-repeat center center;
+            background: url(../img/twitter@2x.png) no-repeat center center;
             position: absolute;
             width: 60px;
             height: 60px;
