--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -402,25 +402,25 @@
 			}
 			a:first-child {
 				&:before {
-            		background: url(../../img/icons/googleCalendar.png) no-repeat center center;
+            		background: url(../img/icons/googleCalendar.png) no-repeat center center;
             		background-size: contain;
         		}
 			}
 			a:nth-child(2) {
 				&:before {
-        			background: url(../../img/icons/yahooCalendar.png) no-repeat center center;
+        			background: url(../img/icons/yahooCalendar.png) no-repeat center center;
             		background-size: contain;
         		}
 			}
 			a:nth-child(3) {
 				&:before {
-        			background: url(../../img/icons/outlook.png) no-repeat center center;
+        			background: url(../img/icons/outlook.png) no-repeat center center;
             		background-size: contain;
         		}
 			}
 			a:nth-child(4) {
 				&:before {
-            		background: url(../../img/icons/icals.png) no-repeat center center;
+            		background: url(../img/icons/icals.png) no-repeat center center;
             		background-size: contain;
         		}
 			}
