--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -248,7 +248,7 @@
 				}
 				&:after {
 					content: " ";
-					background: url(../../img/icon-phone.png) no-repeat center center;
+					background: url(../img/icon-phone.png) no-repeat center center;
 					position: absolute;
 					width: 25px;
 					height: 25px;
