--- a/public/scss/partials/_page-user.scss
+++ b/public/scss/partials/_page-user.scss
@@ -61,7 +61,7 @@
                         margin-left: 25px;
                         &:before {
                             content: " ";
-                            background: url(../../img/icons/home.png) no-repeat center center;
+                            background: url(../img/icons/home.png) no-repeat center center;
                             width: 20px;
                             height: 20px;
                             position: absolute;
