--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10684,64 +10684,65 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
         display: block;
         height: 99%; } }
 
-.comments {
-  word-wrap: break-word; }
-  .comments .verified:before {
-    content: " ";
-    background: url(../img/sign-checkbox.png) no-repeat center center; }
-  .comments .post-comment textarea {
-    margin-top: 10px;
-    width: 100%;
-    height: 80px;
-    border-color: #fe5b5f;
-    border-radius: 10px;
-    resize: none; }
-  .comments .single-comment {
-    border-bottom: 1px solid #f9f9f9;
-    padding: 20px; }
-    .comments .single-comment .user-profil {
+.comments .verified:before {
+  content: " ";
+  background: url(../img/sign-checkbox.png) no-repeat center center; }
+
+.comments .post-comment textarea {
+  margin-top: 10px;
+  width: 100%;
+  height: 80px;
+  border-color: #fe5b5f;
+  border-radius: 10px;
+  resize: none; }
+
+.comments .single-comment {
+  word-wrap: break-word;
+  border-bottom: 1px solid #f9f9f9;
+  padding: 20px; }
+  .comments .single-comment .user-profil {
+    width: 35px;
+    height: 35px;
+    margin: 0 auto;
+    position: relative;
+    border-radius: 2px;
+    overflow: hidden;
+    margin-right: 13px; }
+    .comments .single-comment .user-profil img {
       width: 35px;
       height: 35px;
-      margin: 0 auto;
-      position: relative;
-      border-radius: 2px;
-      overflow: hidden;
-      margin-right: 13px; }
-      .comments .single-comment .user-profil img {
-        width: 35px;
-        height: 35px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto; }
+  .comments .single-comment div p {
+    margin-bottom: 0;
+    letter-spacing: 1px;
+    color: #343434; }
+  .comments .single-comment div .by-when {
+    font-size: 1.2em; }
+    .comments .single-comment div .by-when a {
+      color: #a8acb3; }
+  .comments .single-comment div .like-group {
+    padding-top: 5px; }
+    .comments .single-comment div .like-group p, .comments .single-comment div .like-group a {
+      color: #a8acb3; }
+    .comments .single-comment div .like-group a:first-child {
+      padding-left: 25px;
+      position: relative; }
+      .comments .single-comment div .like-group a:first-child:before {
+        content: "\e005";
+        font-family: glyphicon;
+        font-family: Glyphicons Halflings;
+        color: #a8acb3;
         position: absolute;
-        top: 0;
         left: 0;
-        bottom: 0;
-        right: 0;
-        margin: auto; }
-    .comments .single-comment div p {
-      margin-bottom: 0;
-      letter-spacing: 1px;
-      color: #343434; }
-    .comments .single-comment div .by-when {
-      font-size: 1.2em; }
-      .comments .single-comment div .by-when a {
-        color: #a8acb3; }
-    .comments .single-comment div .like-group {
-      padding-top: 5px; }
-      .comments .single-comment div .like-group p, .comments .single-comment div .like-group a {
-        color: #a8acb3; }
-      .comments .single-comment div .like-group a:first-child {
-        padding-left: 25px;
-        position: relative; }
-        .comments .single-comment div .like-group a:first-child:before {
-          content: "\e005";
-          font-family: glyphicon;
-          font-family: Glyphicons Halflings;
-          color: #a8acb3;
-          position: absolute;
-          left: 0;
-          font-size: 1.2em;
-          top: -2px; }
-        .comments .single-comment div .like-group a:first-child:hover:before, .comments .single-comment div .like-group a:first-child:active:before {
-          color: #fc5a5f; }
+        font-size: 1.2em;
+        top: -2px; }
+      .comments .single-comment div .like-group a:first-child:hover:before, .comments .single-comment div .like-group a:first-child:active:before {
+        color: #fc5a5f; }
 
 .mobile-screen {
   position: absolute;
