--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13461,6 +13461,9 @@ section.home-footer .row > div {
 .email-modal p {
   font-size: 18px; }
 
+.container.write-review {
+  font-size: 1.3em; }
+
 .connect-form {
   padding-top: 1px;
   margin-top: 15px;
