--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -55,6 +55,7 @@ body {
 @import "partials/page-hairdresser";
 @import "partials/select";
 @import "partials/emailModal";
+@import "partials/page-write-review";
 
 //Bastien CSS work
 @import "partials/auth-form";
