--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -42,21 +42,22 @@
             }
         }
     }
-
-    .btn-red {
-        height: 58px;
-        font-size: 1.4em;
-        text-align: center;
-        padding: 0; 
-        margin: 10px;
-        line-height: 30px;
-        text-transform: uppercase;
-        font-family: $font-second;
-        font-weight: $latoBold;
-        border-radius:0;
-        padding: 16px 30px;
-        border-radius: 0 !important;
-        letter-spacing: 2px;
+    .choice {
+        .btn-red {
+            height: 58px;
+            font-size: 1.4em;
+            text-align: center;
+            padding: 0;
+            margin: 10px;
+            line-height: 30px;
+            text-transform: uppercase;
+            font-family: $font-second;
+            font-weight: $latoBold;
+            border-radius:0;
+            padding: 16px 30px;
+            border-radius: 0 !important;
+            letter-spacing: 2px;
+        }
     }
 }
 section.home-section {
@@ -126,7 +127,7 @@ section.home-section {
 
 .choice {
     margin-top: 90px;
-    
+
 }
 
 .landing .main-searchbar, .home-search .main-searchbar {
@@ -378,7 +379,7 @@ section.home-section {
         }
         .picture-container {
             display: inline-block;
-            overflow: hidden; 
+            overflow: hidden;
             width: 100%;
             a {
                 width: 100%;
@@ -414,7 +415,7 @@ section.home-section {
 
         a.readmore, a.readmore:hover {
             text-decoration: underline;
-            font-size: 14px; 
+            font-size: 14px;
         }
     }
 }
