--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -1,6 +1,7 @@
 header {
 	a.btn-red {
 		font-size: 1em;
+		letter-spacing: .5px;
 	}
 	a.menu-trigger {
 		background: url(../img/mobile-menu.png) no-repeat center center;
