--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12457,20 +12457,7 @@ section.home-footer .row > div {
       height: 100%;
       position: relative;
       margin-left: -15px; }
-      @media screen and (max-width: 991px) {
-        .hairfie-singleView#content .single-view #carousel-hairfie .outer-img {
-          display: inline-block;
-          position: relative;
-          width: 100%; }
-          .hairfie-singleView#content .single-view #carousel-hairfie .outer-img:after {
-            content: '';
-            display: block; } }
-      @media screen and (min-width: 570px) and (max-width: 767px) {
-        .hairfie-singleView#content .single-view #carousel-hairfie .item {
-          height: 570px; }
-          .hairfie-singleView#content .single-view #carousel-hairfie .item .outer-img {
-            height: 767px; } }
-      .hairfie-singleView#content .single-view #carousel-hairfie .item .outer-img img {
+      .hairfie-singleView#content .single-view #carousel-hairfie .item img {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 50% 50%;
@@ -12483,41 +12470,6 @@ section.home-footer .row > div {
         color: white;
         font-weight: 600;
         z-index: 99999; }
-      .hairfie-singleView#content .single-view #carousel-hairfie .user {
-        position: absolute;
-        width: 50px;
-        height: 50px;
-        right: 20px;
-        top: 20px;
-        overflow: hidden;
-        z-index: 99999; }
-        .hairfie-singleView#content .single-view #carousel-hairfie .user img {
-          position: absolute;
-          width: 100%;
-          height: 100%; }
-      .hairfie-singleView#content .single-view #carousel-hairfie .carousel-control {
-        bottom: 0;
-        height: 40px;
-        width: 40px;
-        top: auto; }
-        .hairfie-singleView#content .single-view #carousel-hairfie .carousel-control.left {
-          left: 50%;
-          margin-left: -40px; }
-        .hairfie-singleView#content .single-view #carousel-hairfie .carousel-control.right {
-          right: 50%;
-          margin-right: -40px; }
-        .hairfie-singleView#content .single-view #carousel-hairfie .carousel-control span.arrow {
-          background-image: none;
-          width: 20px;
-          height: 20px;
-          background-color: rgba(255, 255, 255, 0.65);
-          border-radius: 100%; }
-          .hairfie-singleView#content .single-view #carousel-hairfie .carousel-control span.arrow.arrow-right {
-            position: static;
-            margin: 10px auto; }
-          .hairfie-singleView#content .single-view #carousel-hairfie .carousel-control span.arrow.arrow-left {
-            position: static;
-            margin: 10px auto; }
     .hairfie-singleView#content .single-view > div:nth-child(2) {
       padding: 20px; }
       .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos {
