--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -30,28 +30,7 @@
 			height: 100%;
 			position: relative;
 			margin-left: -15px;
-			@media screen and (max-width: $screen-sm-max) {
-				.outer-img {
-					display: inline-block;
-				    position: relative;
-				    width: 100%;
-
-				    &:after {
-				    	content: '';
-				    	display: block;
-				    }
-				}
-			}
-			@media screen and (min-width: 570px) and (max-width: $screen-xs-max) {
-				.item {
-					height: 570px;
-
-					.outer-img {
-						height: $screen-xs-max;
-					}
-				}
-			}
-			.item .outer-img img {
+			.item img {
 				background-repeat: no-repeat;
 			    background-size: cover;
 			    background-position: 50% 50%;
@@ -64,46 +43,6 @@
 				color: white;
 				font-weight: $semiBold;
 				z-index: 99999;
-			}
-			.user {
-				position: absolute;
-				width: 50px; height: 50px;
-				right: 20px;top: 20px;
-				overflow: hidden;
-				z-index: 99999;
-				img {
-					position: absolute;
-					width: 100%; height: 100%;
-				}
-			}
-			.carousel-control {
-				bottom: 0;
-				height: 40px;
-				width: 40px;
-				top: auto;
-				&.left {
-					left: 50%;
-					margin-left: -40px;
-				}
-				&.right {
-					right: 50%;
-					margin-right: -40px;
-				}
-				span.arrow {
-					background-image: none;
-					width: 20px; height: 20px;
-					background-color: rgba(255,255,255,0.65);
-					border-radius: 100%;
-					&.arrow-right {
-						position: static;
-						margin: 10px auto;
-					}
-					&.arrow-left {
-						position: static;
-						margin: 10px auto;
-					}
-				}
-
 			}
 		}
 		> div:nth-child(2) {
