--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12470,6 +12470,26 @@ section.home-footer .row > div {
         color: white;
         font-weight: 600;
         z-index: 99999; }
+      .hairfie-singleView#content .single-view #carousel-hairfie .indice-control {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        text-align: center; }
+        .hairfie-singleView#content .single-view #carousel-hairfie .indice-control a {
+          opacity: 0.5;
+          display: inline-block;
+          height: 40px;
+          width: 40px; }
+          .hairfie-singleView#content .single-view #carousel-hairfie .indice-control a span.arrow {
+            background-image: none;
+            width: 20px;
+            height: 20px;
+            background-color: rgba(255, 255, 255, 0.65);
+            border-radius: 100%;
+            position: static;
+            margin: 10px auto; }
+          .hairfie-singleView#content .single-view #carousel-hairfie .indice-control a:hover, .hairfie-singleView#content .single-view #carousel-hairfie .indice-control a:active, .hairfie-singleView#content .single-view #carousel-hairfie .indice-control a.active {
+            opacity: 0.9; }
     .hairfie-singleView#content .single-view > div:nth-child(2) {
       padding: 20px; }
       .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos {
