--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -44,6 +44,29 @@
 				font-weight: $semiBold;
 				z-index: 99999;
 			}
+			.indice-control {
+				width: 100%;
+				position: absolute;
+				bottom: 0;
+				text-align: center;
+				a {
+					opacity: 0.5;
+					display: inline-block;
+					height: 40px;
+					width: 40px;
+					span.arrow {
+						background-image: none;
+						width: 20px; height: 20px;
+						background-color: rgba(255,255,255,0.65);
+						border-radius: 100%;
+						position: static;
+						margin: 10px auto;
+					}
+					&:hover,&:active,&.active {
+				    	opacity: 0.9;
+					}
+				}
+			}
 		}
 		> div:nth-child(2) {
 			padding: 20px;
