--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -69,7 +69,7 @@
 			}
 			.before,.after {
 				position: absolute;
-				font-weight: bolder;
+				font-weight: 200;
 			    bottom: 0;
 			    color: white;
 			    font-size: 3em;
